--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
 find_package(Threads)
 add_executable(main main.cpp)
-target_link_libraries(main PUBLIC target Threads::Threads)
+target_link_libraries(main PUBLIC
+        target Threads::Threads)
