xds sample2 done

--- a/schema/CMakeLists.txt
+++ b/schema/CMakeLists.txt
@@ -41,6 +41,7 @@ grpc_generate_cpp(grpc_srcs grpc_hdrs ${PROTO_SRC_DIR} ${proto})]]
 include_directories(CURRENT_DIR)
 add_library(target STATIC
         AdsClient.cpp
+        AsyncAdsClient.cpp
         ${proto_srcs}
         ${grpc_srcs}
 )
