--- a/schema/CMakeLists.txt
+++ b/schema/CMakeLists.txt
@@ -40,8 +40,8 @@ grpc_generate_cpp(grpc_srcs grpc_hdrs ${PROTO_SRC_DIR} ${proto})]]
 
 include_directories(CURRENT_DIR)
 add_library(target STATIC
-        AdsClient.cpp
-        AsyncAdsClient.cpp
+        ../src/ads/AdsClient.cpp
+        ../src/asnyc_ads/AsyncAdsClient.cpp
         ${proto_srcs}
         ${grpc_srcs}
 )
