xds sample2 done

--- a/src/ads/CMakeLists.txt
+++ b/src/ads/CMakeLists.txt
@@ -1,5 +1,4 @@
 find_package(Threads)
-add_executable(ads main.cpp )
+add_executable(ads main.cpp AdsClient.cpp )
 target_link_libraries(ads PUBLIC
-        AdsClient.cpp
         target Threads::Threads)
