기존 xds.proto 버리고 data-plane api 사용

--- a/schema/CMakeLists.txt
+++ b/schema/CMakeLists.txt
@@ -35,51 +35,88 @@ macro(proto_generate _PATH _INCLUDE _GLOB)
 endmacro(proto_generate)
 
 
-proto_generate(proto proto GLOB_RECURSE)
+#[[
+proto_generate(proto/envoy/admin proto GLOB_RECURSE)
+proto_generate(proto/envoy/annotations proto GLOB_RECURSE)
+proto_generate(proto/envoy/api proto GLOB_RECURSE)
+proto_generate(proto/envoy/config proto GLOB_RECURSE)
+proto_generate(proto/envoy/data proto GLOB_RECURSE)
+proto_generate(proto/envoy/extensions proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/accesslog proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/auth proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/cluster proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/endpoint proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/event_reporting proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/ext_proc proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/extension proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/health proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/listener proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/load_stats proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/metrics proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/rate_limit_quota proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/ratelimit proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/route proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/runtime proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/secret proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/status proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/tap proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/trace proto GLOB_RECURSE)
+proto_generate(proto/envoy/service/discovery proto GLOB_RECURSE)
+
+proto_generate(proto/envoy/type proto GLOB_RECURSE)
+proto_generate(proto/envoy/watchdog proto GLOB_RECURSE)
+proto_generate(proto/google proto GLOB_RECURSE)
+proto_generate(proto/io proto GLOB_RECURSE)
+proto_generate(proto/opencensus proto GLOB_RECURSE)
+proto_generate(proto/opentelemetry proto GLOB_RECURSE)
+proto_generate(proto/udpa proto GLOB_RECURSE)
+proto_generate(proto/validate proto GLOB_RECURSE)
+proto_generate(proto/xds proto GLOB_RECURSE)
+]]
 
 
+macro(proto_service_generate _PATH _INCLUDE _GLOB)
+    file(${_GLOB} PROTO_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
+            ${_PATH}/*.proto)
+    foreach (_target IN LISTS PROTO_FILES)
+        get_filename_component(_directory ${_target} DIRECTORY)
+        get_filename_component(_filename ${_target} NAME_WLE)
+        get_filename_component(PROTO_FILES_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${_target}" PATH)
+        file(MAKE_DIRECTORY "${proto_dest}/${_directory}")
 
+        set(target_proto_srcs "${proto_dest}/${_directory}/${_filename}.pb.cc")
+        set(target_proto_hdrs "${proto_dest}/${_directory}/${_filename}.pb.h")
+        set(target_grpc_srcs "${proto_dest}/${_directory}/${_filename}.grpc.pb.cc")
+        set(target_grpc_hdrs "${proto_dest}/${_directory}/${_filename}.grpc.pb.h")
 
-#set (proto_name greetings)
-set (proto_name xds)
+        add_custom_command(
+                OUTPUT "${target_proto_srcs}" "${target_proto_hdrs}" "${target_grpc_srcs}" "${target_grpc_hdrs}"
+                COMMAND ${_PROTOBUF_PROTOC}
+                ARGS --grpc_out "${proto_dest}/${_INCLUDE}"
+                --cpp_out "${proto_dest}/${_INCLUDE}"
+                -I"${CMAKE_CURRENT_SOURCE_DIR}/${_INCLUDE}"
+                --proto_path "${CMAKE_CURRENT_SOURCE_DIR}/proto"
+                "--plugin=protoc-gen-grpc=${_GRPC_CPP_PLUGIN_EXECUTABLE}"  #이거 안해주면 에러 발생
+                "${CMAKE_CURRENT_SOURCE_DIR}/${_target}"
+                DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${_target}"
+        )
 
-# Get proto files
-get_filename_component(proto "proto/${proto_name}.proto" ABSOLUTE)
-get_filename_component(proto_dir "${proto}" DIRECTORY)
-
-set(CURRENT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-set(PROTO_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/proto-src)
-file(MAKE_DIRECTORY ${PROTO_SRC_DIR})
-include_directories(${PROTO_SRC_DIR})
-
-# Generate source files
-set(proto_srcs "${PROTO_SRC_DIR}/${proto_name}.pb.cc")
-set(proto_hdrs "${PROTO_SRC_DIR}/${proto_name}.pb.h")
-set(grpc_srcs "${PROTO_SRC_DIR}/${proto_name}.grpc.pb.cc")
-set(grpc_hdrs "${PROTO_SRC_DIR}/${proto_name}.grpc.pb.h")
-add_custom_command(
-        OUTPUT "${proto_srcs}" "${proto_hdrs}" "${grpc_srcs}" "${grpc_hdrs}"
-        COMMAND
-        ${_PROTOBUF_PROTOC} ARGS "--grpc_out=${PROTO_SRC_DIR}"
-        "--cpp_out=${PROTO_SRC_DIR}" "--proto_path=${proto_dir}"
-        "--plugin=protoc-gen-grpc=${_GRPC_CPP_PLUGIN_EXECUTABLE}"
-        "${proto}"
-        DEPENDS "${proto}"
-        COMMENT "Generating C++ from hello.proto"
-)
+        LIST(APPEND ENVOY_PROTO_SRCS ${target_proto_srcs})
+        LIST(APPEND ENVOY_PROTO_HDRS ${target_proto_hdrs})
+        LIST(APPEND ENVOY_PROTO_SRCS ${target_grpc_srcs})
+        LIST(APPEND ENVOY_PROTO_HDRS ${target_grpc_hdrs})
+    endforeach()
+endmacro(proto_service_generate)
 
 #[[protobuf_generate_cpp(proto_srcs proto_hdrs ${PROTO_SRC_DIR} ${proto})
 grpc_generate_cpp(grpc_srcs grpc_hdrs ${PROTO_SRC_DIR} ${proto})]]
+proto_service_generate(proto proto GLOB_RECURSE)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/proto-src/proto)
 
-
-
 add_library(target STATIC
-        ../src/ads/AdsClient.cpp
+        #../src/ads/AdsClient.cpp
         ../src/asnyc_ads/AsyncAdsClient.cpp
-        ${proto_srcs}
-        ${grpc_srcs}
         ${ENVOY_PROTO_SRCS}
 )
 
