--- a/schema/proto/envoy/admin/v3/BUILD
+++ b/schema/proto/envoy/admin/v3/BUILD
@@ -6,8 +6,11 @@ licenses(["notice"])  # Apache 2
 
 api_proto_package(
     deps = [
+        "//envoy/config/bootstrap/v3:pkg",
+        "//envoy/config/cluster/v3:pkg",
         "//envoy/config/core/v3:pkg",
+        "//envoy/config/tap/v3:pkg",
+        "//envoy/type/v3:pkg",
         "@com_github_cncf_xds//udpa/annotations:pkg",
-        "@com_github_cncf_xds//xds/annotations/v3:pkg",
     ],
 )
