--- a/src/anyapi_ads/CMakeLists.txt
+++ b/src/anyapi_ads/CMakeLists.txt
@@ -1,6 +1,11 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/proto-src/proto)
 
 find_package(Threads)
-add_executable(anyapi main.cpp AdsClient.cpp )
+add_executable(anyapi main.cpp
+        AdsClient.cpp
+        CdsResource.cpp
+        EdsResource.cpp
+
+)
 target_link_libraries(anyapi PUBLIC
         target Threads::Threads)
